# RAG-vs-LLM-WIKI

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: agentic_rag.py  app.py  graph_rag.py  judge.py  rag.py  rerank.py  wiki.py
data/: demo_questions.json
data/graph/: by_file.jsonl  edges.jsonl  entities.jsonl  manifest.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: MethodPicker.tsx  MitigationsBanner.tsx  PipelinePanel.tsx  QueryBar.tsx
frontend/src/lib/: sse.ts
scripts/: build_corpus.py  build_graph.py  build_index.py  curate_questions.py  smoke_test.py
