[project]
name = "rag-vs-llm-wiki"
version = "0.1.0"
description = "PoC: side-by-side comparison of classic RAG vs Karpathy-style LLM Wiki agent over HotpotQA."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.55",
    "chromadb>=0.5",
    "datasets>=3.1",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "tiktoken>=0.8",
]

[tool.uv]
package = false
